k8/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ./backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ./backend
  template:
    metadata:
      labels:
        app: ./backend
    spec:
      containers:
      - name: ./backend
        image: <AWS_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/my-backend:latest
        ports:
        - containerPort: 5000
