k8/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: train-ticket-service

spec:
  type: LoadBalancer

  selector:
    app: train-ticket-reservation

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
